# agentforge

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  WORKFLOW.md  pyproject.toml
agentforge/: main.py
agentforge/agents/: base.py  clarifier.py  leader.py  leader_tools.py  sub_orchestrator.py  worker.py
agentforge/core/: checkpoint.py  context_store.py  global_context.py  models.py  registry.py  state.py
agentforge/graph/: edges.py  nodes.py
agentforge/interfaces/: base_interface.py  slack_interface.py
agentforge/observer/: historian.py  researcher.py  retrospective.py  scribe.py  self_improve.py
agentforge/sandbox/: docker_executor.py
agentforge/tools/: dev_tools.py
agentforge/verification/: ci_layer.py  semantic_layer.py
agentforge/workspace/: manager.py
tests/integration/: test_leader_flow.py  test_self_improve.py
tests/unit/: test_escalation.py  test_graph_builder.py  test_models.py  test_nodes.py  test_observer.py  test_registry.py  test_verification.py
workflows/: builder.py
workflows/templates/: bug_fix.yaml  feature_dev.yaml
