[project]
name = "agentforge"
version = "0.1.0"
description = "Agent-based development team orchestration system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "slack-bolt>=1.18",
    "rich>=13.0",
    "aiofiles>=23.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "aiohttp>=3.13.5",
]

[project.scripts]
agentforge = "agentforge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentforge"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
